# ros_workspace

./: README.md
bobac3_msgs/: CMakeLists.txt  package.xml
bobac3_msgs/msg/: ar_pose.msg  skeleton.msg
bobac3_msgs/srv/: Neck.srv  SetCharge.srv  SetRelativeMove.srv  track.srv
bobac3_navigation/launch/: bobac3_nav_2d.launch
bobac3_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  teb_local_planner_params.yaml
bobac3_slam/: CMakeLists.txt
bobac3_slam/config/: bobac3_2d.lua  bobac3_2d_sim.lua
bobac3_slam/launch/: bobac3_cartographer_sim.launch  bobac3_gmapping.launch  bobac3_rtabmap_sim.launch  bobac3_slam_sim.launch  rtabmap_saver.launch
bobac3_slam/rviz/: bobac3_cartographer.rviz
robot_audio/: CMakeLists.txt  package.xml
robot_audio/launch/: voice_aiui.launch  voice_collect.launch
robot_audio/src/: audio_test_client.cpp  interaction.cpp
robot_audio/src/voice_control/: voice_control.cpp  voice_control.h
robot_audio/src/voice_nav/: voice_nav.cpp  voice_nav.h
ubuntu元宝/: Ubuntu 64 位.nvram  Ubuntu 64 位.vmx  Ubuntu 64 位.vmxf
